fix bug with image on Authorisation page

--- a/SportHub/src/components/AuthContainer/styles/style.module.scss
+++ b/SportHub/src/components/AuthContainer/styles/style.module.scss
@@ -6,7 +6,7 @@
     height: 100vh;
 
     .img_container{
-        background-image: url("https://library.sportingnews.com/2023-02/nba-plain--bae9f57c-4bd8-46fd-a3ad-5e5f2c6d7df4.png");
+        background-image: url("https://library.sportingnews.com/2023-02/nba-plain--bae9f57c-4bd8-46fd-a3ad-5e5f2c6d7df4.png") !important;
         background-size: cover;
         width: 45%;
 
