--- a/SportHub/src/modules/SignUpForm/styles/style.module.scss
+++ b/SportHub/src/modules/SignUpForm/styles/style.module.scss
@@ -5,7 +5,7 @@
     gap: 3vh;
 
     .error{
-        color: var(--main-color);
+        color: var(--color-red-regular);
         font-size: 18px;
     }
 
