--- a/SportHub/src/styles/base.scss
+++ b/SportHub/src/styles/base.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import "src/styles/variables.";
+@import "variables";
+@import "hint";
 
 html {
     box-sizing: border-box;
