--- a/SportHub/src/modules/VerticalAdminMenu/styles/style.module.scss
+++ b/SportHub/src/modules/VerticalAdminMenu/styles/style.module.scss
@@ -1,6 +1,7 @@
 .vertical_menu{
   width: 6vw;
   display: flex;
+  position:relative;
   flex-direction: column;
   align-items: center;
   border-right: 1px solid var(--color-light-lines);
