--- a/SportHub/src/styles/_mixins.scss
+++ b/SportHub/src/styles/_mixins.scss
@@ -49,10 +49,17 @@
 
 @mixin text-bodysemibold{
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 @mixin text-lable{
     font-weight: 600;
     font-size: 10px;
+}
+
+@mixin text-muted-paragraph{
+    color: var(--color-dark-secondary-text);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
 }
