add main article sections fix menu

--- a/SportHub/src/styles/_variables.scss
+++ b/SportHub/src/styles/_variables.scss
@@ -9,6 +9,7 @@
 
     --color-red-pressed: #C80515;
     --color-red-regular: #D72130;
+    --color-red-regular-transparent: #D721301C;
     --color-red-hover: #E02232;
     --color-red-disabled: #D721301C;
 
