--- a/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
+++ b/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
@@ -1,4 +1,10 @@
+.navigation_container{
+    width: 100%;
+    height: 100%;
+}
+
 .nav_area {
+    float: left;
     display: flex;
     flex-direction: column;
     align-items: center;
