--- a/SportHub/src/modules/AdminMainArticlesSection/components/AddMainArticle/styles/style.module.scss
+++ b/SportHub/src/modules/AdminMainArticlesSection/components/AddMainArticle/styles/style.module.scss
@@ -6,6 +6,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    .small_autocomplete{
+      width: 17vw;
+    }
   }
 
   .add_article_autocomplete{
