--- a/SportHub/src/modules/NotLoginedHeader/style/style.module.scss
+++ b/SportHub/src/modules/NotLoginedHeader/style/style.module.scss
@@ -4,17 +4,14 @@ select::-ms-expand {
   display: none;
 }
 
-.container{
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-
   .header{
+      display: flex;
+      align-items: flex-start;
       width: 100vw;
       height: 12vh;
       border-bottom: 1px solid rgb(240, 240, 240);
       .logo{
-        position: absolute;
+        display: flex;
         left:0;
         top:0;
         @include flex-center;
@@ -31,7 +28,8 @@ select::-ms-expand {
         }
       }
       .searchbar{
-          position: absolute;
+
+          display: flex;
           left: 18vw;
           top: 0;
           @include flex-center;
@@ -52,7 +50,7 @@ select::-ms-expand {
       }
       .media
       {
-        position: absolute;
+        display: flex;
         left: 43vw;
         top: 0;
         @include flex-center;
@@ -87,17 +85,11 @@ select::-ms-expand {
       border: none;
       outline-color: white;
 
-      &:focus{
+      &:focus, &:hover{
         outline: none;
         border: none;
         outline-color: white;
       }
-      &:hover{
-        outline: none;
-        border: none;
-        outline-color: white;
-      }
-
     }
 
     .btn_signup
@@ -122,7 +114,7 @@ select::-ms-expand {
     }
     .auth
     {
-      position: absolute;
+      display: flex;
       left: 68vw;
       top: 0;
       @include flex-center;
@@ -135,7 +127,7 @@ select::-ms-expand {
     }
     .languages
     {
-      position: absolute;
+      display: flex;
       left: 89vw;
       top: 0;
       @include flex-center;
@@ -159,8 +151,4 @@ select::-ms-expand {
         }
       }
     }
-
-
     }
-  }
-
