--- a/SportHub/src/modules/LanguagesManagement/components/PopUpAddLanguages/styles/style.module.scss
+++ b/SportHub/src/modules/LanguagesManagement/components/PopUpAddLanguages/styles/style.module.scss
@@ -1,25 +1,26 @@
+@import "src/styles/mixins";
+
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: (0 8vw 16vh 8vw);
-  text-align: center;
-  img {
-    transform: translateY(-50%);
-    margin-bottom: 0;
-  }
+    @include flex-center();
+    flex-direction: column;
+    padding: (0 8vw 16vh 8vw);
+    text-align: center;
+
+    img {
+        transform: translateY(-50%);
+        margin-bottom: 0;
+    }
 }
 
 .buttonContainer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1vh;
-  padding: (2vh 3vw 3vh 3vw);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1vh;
+    padding: (2vh 3vw 3vh 3vw);
 }
 
 hr {
-  width: 100%;
-  border: 1px solid var(--color-hr-light-gray);
+    width: 100%;
+    border: 1px solid var(--color-hr-light-gray);
 }
