--- a/SportHub/src/styles/_variables.scss
+++ b/SportHub/src/styles/_variables.scss
@@ -27,6 +27,11 @@
 
     --color-others-green: #229D1F;
     --color-others-inactive: #ECFAEA;
+
+    --color-table-header-gray: #F2F2F2;
+    --color-table-text-gray: #434C5D;
+
+    --color-hr-light-gray: #F4F5F8;
 }
 
 
