--- a/SportHub/src/pages/Home/styles/style.module.scss
+++ b/SportHub/src/pages/Home/styles/style.module.scss
@@ -3,8 +3,26 @@
 .container
 {
   .content{
-    margin-left: 10vw;
-    width: 100%;
-    background: #C80515;
+    margin-left: 17.5vw;
+    margin-bottom: 20vh;
+    position: relative;
+
+    %bg-text{
+      position: absolute;
+      @include text-h1-background-text();
+      transform: rotate(90deg);
+      color: var(--color-dark-field-frame);
+    }
+    .bg_all{
+      @extend %bg-text;
+      left: -9vw;
+      top: 5vh;
+    }
+
+    .bg_news{
+      @extend %bg-text;
+      right: 10vw;
+      top: 60vh;
+    }
   }
 }
