--- a/SportHub/src/modules/NavigationAdminSystem/components/NavigationItems/styles/style.module.scss
+++ b/SportHub/src/modules/NavigationAdminSystem/components/NavigationItems/styles/style.module.scss
@@ -45,6 +45,12 @@
         &:hover{
             background-color: #f2f2f2;
         }
+
+        &.active{
+            color: var(--color-red-hover);
+            border: none;
+            box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+        }
     }
     
 }
