--- a/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
+++ b/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
@@ -1,6 +1,13 @@
 .navigation_container{
     width: 100%;
     height: 100%;
+
+    .button_container{
+        display: flex;
+        flex-direction: row;
+        margin-left: 40px;
+        gap: 50px;
+    }
 }
 
 .nav_area {
@@ -16,3 +23,4 @@
     flex-direction: column;
     list-style: none;
 }
+
