--- a/SportHub/src/modules/AdminArticlesList/styles/styles.module.scss
+++ b/SportHub/src/modules/AdminArticlesList/styles/styles.module.scss
@@ -1,51 +1,15 @@
 @import "src/styles/mixins";
 
 .list_container{
-    width: 80vw;
+    width: 70vw;
+    padding: 2vw;
     max-height: 100vh;
-    overflow-y: scroll;
+
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
 
-    .card{
-        background: bisque;
-        width: 100%;
-        height: 25vh;
-        padding: 3vw;
-        cursor: pointer;
-        display: flex;
-        gap: 5vw;
-
-        &:hover{
-            box-shadow: 0 0 5vw black;
-        }
-
-        .image{
-            width: 40%;
-            object-fit: cover;
-        }
-
-        .text_content_container{
-            & > *:not(:last-child){
-                margin-bottom: 2vh;
-            }
-
-            .space_between_container{
-                @include flex-between();
-
-                .published{
-                    position: relative;
-
-                    &:before{
-                        content: "";
-                        position: absolute;
-                        left: -2vw;
-                        border-radius: 50%;
-                        width: 1.5vw;
-                        height: 1.5vw;
-                        background: green;
-                    }
-                }
-            }
-        }
-    }
+    overflow-y: scroll;
+    @include thin-scrollbar();
 }
