--- a/SportHub/src/styles/_mixins.scss
+++ b/SportHub/src/styles/_mixins.scss
@@ -8,6 +8,18 @@
     justify-content: space-between;
     align-items: center;
 }
+@mixin thin-scrollbar(){
+    &::-webkit-scrollbar{
+        width: 4px;
+    }
+    &::-webkit-scrollbar-track {
+        background:  var(--color-dark-menu-item);
+    }
+    &::-webkit-scrollbar-thumb {
+        background:  var(--color-dark-secondary-text);
+    }
+}
+
 @mixin text-h1-background-text{
     font-family: var(--font-style-roboto-condensed);
     font-weight: bold;
@@ -73,4 +85,11 @@
     display: -webkit-box;
     -webkit-line-clamp: $amount-of-lines;
     -webkit-box-orient: vertical;
+}
+
+@mixin position-absolute-bottom(){
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
