Article menu front

--- a/SportHub/src/modules/ArticleMenu/styles/style.module.scss
+++ b/SportHub/src/modules/ArticleMenu/styles/style.module.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     width: 55vw;
     gap: 3vh;
+    margin-bottom: 10vh;
     .tab_menu {
         display: flex;
         flex-direction: row;
