Included and fixed all review comments inspite of packages

--- a/SportHub/src/ui/TabPanel/components/Tab/styles/style.module.scss
+++ b/SportHub/src/ui/TabPanel/components/Tab/styles/style.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-transform: uppercase;
     &:hover {
         border: 1.5px solid var(--color-red-regular);
     }
