--- a/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
+++ b/SportHub/src/modules/NavigationAdminSystem/styles/style.module.scss
@@ -8,6 +8,11 @@
         margin-left: 40px;
         gap: 50px;
     }
+
+    .nav_container{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .nav_area {
