--- a/SportHub/src/modules/SearchDropdownList/styles/style.module.scss
+++ b/SportHub/src/modules/SearchDropdownList/styles/style.module.scss
@@ -31,3 +31,9 @@
 .option ul li:first-child span:last-child {
   color: var(--color-red-regular);
 }
+
+.img_icon {
+  margin-left: 2rem;
+  height: 1rem;
+  width: 1rem;
+}
