--- a/SportHub/src/components/HeaderContainer/styles/style.module.scss
+++ b/SportHub/src/components/HeaderContainer/styles/style.module.scss
@@ -5,7 +5,6 @@
     height: 12vh;
     display: flex;
     border-bottom: 1px solid rgb(240, 240, 240);
-
     .logo{
         @include text-menu-caption();
         @include flex-center();
@@ -16,6 +15,7 @@
         font-family: var(--font-style-open-sans);
         border-right: 1px solid var(--color-light-lines);
         color: var(--color-light-white);
+        text-decoration: none;
 
         .logo_text{
             &:hover{
