--- a/SportHub/src/ui/TabPanel/components/Tab/styles/style.module.scss
+++ b/SportHub/src/ui/TabPanel/components/Tab/styles/style.module.scss
@@ -18,7 +18,7 @@
     }
     .flag{
         vertical-align: middle;
-        height: 60%;
+        height: 15px;
     }
     .hidden{
         position: absolute;
