--- a/SportHub/src/modules/NavigationAdminSystem/components/NavigationItems/styles/style.module.scss
+++ b/SportHub/src/modules/NavigationAdminSystem/components/NavigationItems/styles/style.module.scss
@@ -57,9 +57,17 @@
             }
         }
 
-        // .EditThreeDots circle{
-        //     fill: var(--color-red-hover);
-        // }
+        .HiddenTag{
+            position: absolute;
+            background-color: var(--color-dark-field-frame);
+            border-radius: 7px;
+            width: 40px;
+            top: 45%;
+            left: 10px;
+            font-size: 9px;
+            font-family: var(--font-style-open-sans);
+            color: var(--color-dark-menu-item);
+        }
 
         &:hover{
             background-color: #f2f2f2;
