Minor fixes, sanitized dangerouslySetInnerHTML

--- a/SportHub/src/modules/SearchDropdownList/styles/style.module.scss
+++ b/SportHub/src/modules/SearchDropdownList/styles/style.module.scss
@@ -1,6 +1,6 @@
 .optionsContainer {
   max-height: 100%;
-  transform: translateX(-3rem) translateY(1.75vh);
+  transform: translateX(-3.75vw) translateY(1.75vh);
   width: 49.925vw;
   background-color: var(--color-light-white);
   border-radius: 0;
