--- a/SportHub/src/modules/UsersManagment/styles/style.module.scss
+++ b/SportHub/src/modules/UsersManagment/styles/style.module.scss
@@ -23,11 +23,24 @@ $pointer-cursor: pointer;
       border-bottom: 1px solid #ccc;
       box-shadow: 0px 0.5px 1px #ccc;
       padding: 8px;
-
       .align_right_active {
         color: #229D1F;
       }
+      .user_profile{
+        display: flex;
+        flex-direction: row;
+        font-size: 17px;
+        font-family: 'Open Sans', sans-serif;
+        .user_profile_photo {
+          width: 40px;
+          height: 40px;
+        }
 
+        .user_profile_text{
+          padding-left: 10px;
+          padding-top: 8px;
+        }
+      }
     }
   }
 
@@ -60,19 +73,19 @@ $pointer-cursor: pointer;
       position: relative;
       display: flex;
       align-items: center;
+      margin-left: auto;
 
       .search_input {
-        padding: 4px 28px 4px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
         font-size: 14px;
-        line-height: 16px;
+        line-height: 5px;
         color: #333;
-        width: 200px;
+        width: 450px;
         transition: width 0.3s ease-in-out;
+
 
         &:focus {
           width: 240px;
+          outline: none;
         }
       }
 
@@ -111,9 +124,10 @@ $pointer-cursor: pointer;
     }
 
     .search_icon {
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       cursor: $pointer-cursor;
+      margin-right: 2vw;
 
       &:hover {
         opacity: 0.8;
