--- a/SportHub/src/modules/AdminHomeSection/styles/style.module.scss
+++ b/SportHub/src/modules/AdminHomeSection/styles/style.module.scss
@@ -2,4 +2,9 @@
   margin-left: auto;
   margin-right: auto;
   width: fit-content;
+
+  .tabs{
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
