--- a/SportHub/src/modules/UserBreakdownsSection/components/Breakdown/components/BigArticleVisualization/styles/style.module.scss
+++ b/SportHub/src/modules/UserBreakdownsSection/components/Breakdown/components/BigArticleVisualization/styles/style.module.scss
@@ -14,8 +14,9 @@
   }
 
   .image{
-    width: 27vw;
-    height: 37.5vh;
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
   }
 
   .down_text{
