Added view page, fixed review

--- a/SportHub/src/modules/ArticleView/styles/style.module.scss
+++ b/SportHub/src/modules/ArticleView/styles/style.module.scss
@@ -13,7 +13,7 @@
         }
     }
     margin: auto;
-    margin-left: 11.5vw;
+    margin-left: 0;
     display: flex;
     flex-direction: column;
     width: 55vw;
