Fixed var(white) and removed getLanguagesRequest on every changing of i18n.language

--- a/SportHub/src/modules/AdminHeader/styles/style.module.scss
+++ b/SportHub/src/modules/AdminHeader/styles/style.module.scss
@@ -11,7 +11,7 @@ select::-ms-expand {
 
   .searchbar {
     display: flex;
-    background: var(white);
+    background: white;
     width: 25vw;
     height: 12vh;
     font-size: 18px;
@@ -25,7 +25,7 @@ select::-ms-expand {
       left: 43vw;
       top: 0;
       @include flex-center;
-      background: var(white);
+      background: white;
       width: 25vw;
       height: 10vh;
       font-size: 15px;
@@ -38,7 +38,7 @@ select::-ms-expand {
     left: 89vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 11vw;
     height: 12vh;
     font-size: 18px;
@@ -51,7 +51,7 @@ select::-ms-expand {
     left: 68vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 21vw;
     height: 12vh;
     font-size: 18px;
