--- a/SportHub/src/modules/UserHeader/styles/style.module.scss
+++ b/SportHub/src/modules/UserHeader/styles/style.module.scss
@@ -14,7 +14,7 @@ select::-ms-expand {
     left: 18vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 25vw;
     height: 12vh;
     font-size: 18px;
@@ -36,7 +36,7 @@ select::-ms-expand {
     left: 43vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 25vw;
     height: 10vh;
     font-size: 15px;
@@ -108,7 +108,7 @@ select::-ms-expand {
     left: 68vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 21vw;
     height: 12vh;
     font-size: 18px;
@@ -142,7 +142,7 @@ select::-ms-expand {
     left: 89vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 11vw;
     height: 12vh;
     font-size: 18px;
