--- a/SportHub/src/modules/AdminHeader/styles/style.module.scss
+++ b/SportHub/src/modules/AdminHeader/styles/style.module.scss
@@ -11,24 +11,13 @@ select::-ms-expand {
 
   .searchbar {
     display: flex;
-    left: 18vw;
-    top: 0;
-    @include flex-center;
-    background: var(white);
+    background: white;
     width: 25vw;
     height: 12vh;
     font-size: 18px;
+    align-items: center;
     color: rgb(189, 189, 189);
     border-right: 1px solid rgb(240, 240, 240);
-  
-    &:hover {
-      cursor: pointer;
-    }
-  
-    .img_icon {
-      height: 18px;
-      width: 18px;
-    }
   }
 
   .blank {
@@ -36,7 +25,7 @@ select::-ms-expand {
       left: 43vw;
       top: 0;
       @include flex-center;
-      background: var(white);
+      background: white;
       width: 25vw;
       height: 10vh;
       font-size: 15px;
@@ -49,7 +38,7 @@ select::-ms-expand {
     left: 89vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 11vw;
     height: 12vh;
     font-size: 18px;
@@ -62,7 +51,7 @@ select::-ms-expand {
     left: 68vw;
     top: 0;
     @include flex-center;
-    background: var(white);
+    background: white;
     width: 21vw;
     height: 12vh;
     font-size: 18px;
