fix small breakdowns` subtext

--- a/SportHub/src/modules/UserBreakdownsSection/components/Breakdown/components/SmallArticleVisualisation/styles/styles.module.scss
+++ b/SportHub/src/modules/UserBreakdownsSection/components/Breakdown/components/SmallArticleVisualisation/styles/styles.module.scss
@@ -26,6 +26,9 @@
 
     .sub_text{
       color: var(--color-dark-secondary-text);
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     .arrow{
