--- a/SportHub/src/components/ProfileSidebar/styles/style.module.scss
+++ b/SportHub/src/components/ProfileSidebar/styles/style.module.scss
@@ -1,5 +1,6 @@
 .profile_sidebar_active{
   width: 13vw;
+  color: var(--color-dark-black);
   font-family: var(--font-style-open-sans);
   background-color: var(--color-light-white);
   z-index: 1;
